objects/Technician_Compliance__c/Technician_Compliance__c.object-meta.xml
<CustomObject>
    <label>Customer Gift</label>
    <nameField>
        <displayFormat>CG{000000}</displayFormat>
        <label>Technician Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>