objects/Technician_Compliance__c/fields/Customer_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer / Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technician Compliance</relationshipLabel>
    <relationshipName>Technician_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>