objects/Technician_Compliance__c/fields/Date_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Date_Dispatched__c</fullName>
    <label>Date Dispatched</label>
    <type>Date</type>
</CustomField>