objects/Technician_Compliance__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>