objects/Technician_Compliance__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <label>Gift</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Biscuits</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Fudge</fullName>
            </value>
            <value>
                <fullName>Graze Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>