objects/Technician_Compliance__c/fields/Gift_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>Gift_Feedback_Received__c</fullName>
    <inlineHelpText>Enter any feedback received, as a result of sending this gift.</inlineHelpText>
    <label>Gift Feedback Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>