objects/Technician_Compliance__c/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <label>Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>