objects/Technician_Compliance__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <label>Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Warne</fullName>
            </value>
            <value>
                <fullName>Alison Read</fullName>
            </value>
            <value>
                <fullName>Angela Davey</fullName>
            </value>
            <value>
                <fullName>Anne Bassinder</fullName>
            </value>
            <value>
                <fullName>Beverley Harris</fullName>
            </value>
            <value>
                <fullName>Chester Bidmead</fullName>
            </value>
            <value>
                <fullName>Darren Crompton</fullName>
            </value>
            <value>
                <fullName>Diana Pascoe</fullName>
            </value>
            <value>
                <fullName>Gwen Bradby</fullName>
            </value>
            <value>
                <fullName>Ian Buckley</fullName>
            </value>
            <value>
                <fullName>Joanna Fyffe</fullName>
            </value>
            <value>
                <fullName>Joel Bidmead</fullName>
            </value>
            <value>
                <fullName>Laura Borthwick</fullName>
            </value>
            <value>
                <fullName>Marcus Penprase</fullName>
            </value>
            <value>
                <fullName>Michelle Bassinder</fullName>
            </value>
            <value>
                <fullName>Natasha Blake</fullName>
            </value>
            <value>
                <fullName>Nicki Pratten</fullName>
            </value>
            <value>
                <fullName>Nigel Welch</fullName>
            </value>
            <value>
                <fullName>Paul Faraway</fullName>
            </value>
            <value>
                <fullName>Phil Bassinder</fullName>
            </value>
            <value>
                <fullName>Pierina Coleman</fullName>
            </value>
            <value>
                <fullName>Rachel Dowrick</fullName>
            </value>
            <value>
                <fullName>Rachel Yelland</fullName>
            </value>
            <value>
                <fullName>Samantha Cavinder</fullName>
            </value>
            <value>
                <fullName>Samantha Spencer</fullName>
            </value>
            <value>
                <fullName>Sarah Bayley</fullName>
            </value>
            <value>
                <fullName>Sharon Standen</fullName>
            </value>
            <value>
                <fullName>Tracey Coles</fullName>
            </value>
            <value>
                <fullName>Viv Stuchberry</fullName>
            </value>
            <value>
                <fullName>Warren Bidmead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>