objects/Technician_Compliance__c/fields/Percentage_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Achieved__c</fullName>
    <formula>Value__c / Technician__r.Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>