objects/Technician_Compliance__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Try to catagorise the reason as much as possible. If Other is selected, enter full details into the Comments box.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Encouragement</fullName>
            </value>
            <value>
                <fullName>Incorrect Invoicing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patience</fullName>
            </value>
            <value>
                <fullName>Positive Feedback</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Technician Appearance / Attitiude</fullName>
            </value>
            <value>
                <fullName>Technician Failed to Attend Site at Appointed Time</fullName>
            </value>
            <value>
                <fullName>Visit not Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>