objects/Technician_Compliance__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Technician Compliance</relationshipLabel>
    <relationshipName>Technician_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>