objects/Technician_Compliance__c/listViews/Feedback_Received.listView-meta.xml
<ListView>
    <fullName>Feedback_Received</fullName>
    <columns>NAME</columns>
    <columns>Customer_Site__c</columns>
    <columns>Firstname__c</columns>
    <columns>Lastname__c</columns>
    <columns>Reason__c</columns>
    <columns>Comments__c</columns>
    <columns>Gift__c</columns>
    <columns>Originator__c</columns>
    <columns>Date_Dispatched__c</columns>
    <columns>Gift_Feedback_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gift_Feedback_Received__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Feedback Received</label>
</ListView>