objects/Technician_Compliance__c/listViews/To_Be_Dispatched.listView-meta.xml
<ListView>
    <fullName>To_Be_Dispatched</fullName>
    <columns>NAME</columns>
    <columns>Customer_Site__c</columns>
    <columns>Firstname__c</columns>
    <columns>Lastname__c</columns>
    <columns>Reason__c</columns>
    <columns>Comments__c</columns>
    <columns>Gift__c</columns>
    <columns>Originator__c</columns>
    <columns>Date_Dispatched__c</columns>
    <columns>Gift_Feedback_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Dispatched__c</field>
        <operation>equals</operation>
    </filters>
    <label>To Be Dispatched</label>
</ListView>